hphp/hack/test/sound_dynamic/typing/targeted_pessimisation/meth_param.php.exp
# Original file

     1	<?hh
     2	
     3	class C {
     4	  <<__SupportDynamicType>>
     5	  public function f(shape() $s): void {
     6	    $this->g($s);
     7	  }
     8	
     9	  <<__SupportDynamicType>>
    10	  public static function ff(shape() $s): void {
    11	    self::gg($s);
    12	  }
    13	
    14	  public function g(shape() $s): void {}
    15	
    16	  public static function gg(shape() $s): void {}
    17	}


# Original errors

File "meth_param.php", line 5, characters 19-19:
Method  `f` in class `C` is not dynamically callable. (Typing[4402])
  File "meth_param.php", line 6, characters 14-15:
  Invalid argument
  File "meth_param.php", line 14, characters 21-27:
  Expected `shape()`
  File "meth_param.php", line 5, characters 29-30:
  But got `dynamic` because method must be callable in a dynamic context
File "meth_param.php", line 10, characters 26-27:
Method  `ff` in class `C` is not dynamically callable. (Typing[4402])
  File "meth_param.php", line 11, characters 14-15:
  Invalid argument
  File "meth_param.php", line 16, characters 29-35:
  Expected `shape()`
  File "meth_param.php", line 10, characters 37-38:
  But got `dynamic` because method must be callable in a dynamic context


# Pessimisation log

pessimise:	param,meth_param.php,14,$s
pessimise:	param,meth_param.php,16,$s


# Pessimised file

     1	<?hh
     2	
     3	class C {
     4	  <<__SupportDynamicType>>
     5	  public function f(shape() $s): void {
     6	    $this->g($s);
     7	  }
     8	
     9	  <<__SupportDynamicType>>
    10	  public static function ff(shape() $s): void {
    11	    self::gg($s);
    12	  }
    13	
    14	  public function g(~shape() $s): void {}
    15	
    16	  public static function gg(~shape() $s): void {}
    17	}
    18	


# Errors after pessimisation

No errors
